# synapse

./: .gitignore  .mcp.json  AGENTS.md  README.md  justfile  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
apps/synapse-pingora/: CLAUDE.md  Cargo.toml  README.md  audit-report.md  config.example.yaml  config.horizon.2.yaml  config.horizon.3.yaml  config.horizon.yaml  config.integration.yaml  config.load.yaml  config.yaml  justfile  package.json  project.json  test.sh
apps/synapse-pingora/assets/: admin_console.html
apps/synapse-pingora/assets/console-next/: index.html
apps/synapse-pingora/assets/console-next/assets/: app.css  app.js
apps/synapse-pingora/assets/live/: index.html
apps/synapse-pingora/assets/live/assets/: app.css  app.js
apps/synapse-pingora/benches/: actor_session_bench.rs  bot_detection_bench.rs  captcha_bench.rs  contention.rs  correlation.rs  detection.rs  escalation_bench.rs  goblins.rs  header_profiler_bench.rs  heavy_payloads.json  hot_path_bench.rs  payloads.json  pipeline.rs  profiler_bench.rs  proxy_overhead_bench.rs  reload_bench.rs  response_scan_bench.rs  risk_scoring.rs  scenarios.json  schema_bench.rs  subsystems.rs
apps/synapse-pingora/benches/k6/: scenarios.js
apps/synapse-pingora/docs/: BENCHMARK_METHODOLOGY.md  CODE_REVIEW.md  GAP_ANALYSIS.md  PERFORMANCE_ANALYSIS.md  RUST_CODE_REVIEW.md  SECURITY_AUDIT.md
apps/synapse-pingora/docs/api/: admin-api.md
apps/synapse-pingora/docs/architecture/: ADVANCED_THREAT_DETECTION.md
apps/synapse-pingora/docs/archive/: INTEGRATION_WITH_RISK_SERVER.md
apps/synapse-pingora/docs/archive/observability/: TUNNEL_METRICS.md  tunnel-alerts.yml  tunnel-grafana-dashboard.json  tunnel-prometheus-scrape.yml
apps/synapse-pingora/docs/archive/project/activity/: PHASE_5_COMPLETION.md
apps/synapse-pingora/docs/archive/tutorials/: shadow-mirroring-honeypots.md  tuning-waf-rules.md
apps/synapse-pingora/docs/configuration/: REFERENCE.md
apps/synapse-pingora/docs/issues/: phase-1-backlog.md
apps/synapse-pingora/docs/performance/: BENCHMARK_COST_BREAKDOWN.md  BENCHMARK_REPORT_2026_01.md  FD_LIFECYCLE.md  GOBLINS_REPORT.md  HTTP_BENCHMARK_HARNESS.md  OPTIMIZATION_PLAN_BULK.md
apps/synapse-pingora/docs/plans/: pingora-parallel-execution.md
apps/synapse-pingora/docs/project/issues/: phase-1-backlog.md
apps/synapse-pingora/docs/project/reviews/: phase-1-performance-review.md
apps/synapse-pingora/docs/reference/: compatibility-notes.md  configuration.md
apps/synapse-pingora/docs/reviews/: phase-1-security-audit.md
apps/synapse-pingora/docs/tutorials/: custom-dlp-patterns.md  shadow-mirroring-honeypots.md
apps/synapse-pingora/scripts/: check-synapse-test-serial.sh  fd-lifecycle.sh
apps/synapse-pingora/scripts/bench/: compare.sh  run.sh  start-upstream.sh  upstream.conf
apps/synapse-pingora/src/: CLAUDE.md  access.rs  admin_server.rs  api.rs  block_log.rs  block_page.rs  body.rs  config.rs  config_manager.rs  detection_engine.rs  dlp.rs  headers.rs  health.rs  lib.rs  main.rs  metrics.rs  production_rules.json  ratelimit.rs  reload.rs  rules.rs  shutdown.rs  simulator.rs  site_waf.rs  sni_validation.rs  telemetry.rs  tls.rs  trap.rs  tui.rs  validation.rs  vhost.rs
apps/synapse-pingora/src/actor/: manager.rs  mod.rs
apps/synapse-pingora/src/correlation/: campaign_state.rs  fingerprint_index.rs  integration_tests.rs  manager.rs  mod.rs
apps/synapse-pingora/src/correlation/detectors/: attack_sequence.rs  auth_token.rs  behavioral_similarity.rs  common.rs  graph.rs  ja4_rotation.rs  mod.rs  network_proximity.rs  shared_fingerprint.rs  timing_correlation.rs
apps/synapse-pingora/src/crawler/: detector.rs  dns_resolver.rs  known_crawlers.rs  mod.rs
apps/synapse-pingora/src/detection/: credential_stuffing.rs  mod.rs  types.rs
apps/synapse-pingora/src/dlp/: mod.rs  scanner.rs  stream.rs
apps/synapse-pingora/src/entity/: mod.rs  store.rs
apps/synapse-pingora/src/fingerprint/: integrity.rs  ja4.rs  mod.rs
apps/synapse-pingora/src/geo/: impossible_travel.rs  mod.rs  types.rs
apps/synapse-pingora/src/horizon/: blocklist.rs  client.rs  manager.rs  types.rs
apps/synapse-pingora/src/intelligence/: mod.rs  signal_manager.rs
apps/synapse-pingora/src/interrogator/: captcha_manager.rs  cookie_manager.rs  injection_tracker.rs  js_challenge_manager.rs  mod.rs  progression_manager.rs
apps/synapse-pingora/src/payload/: manager.rs  mod.rs
apps/synapse-pingora/src/persistence/: mod.rs
apps/synapse-pingora/src/profiler/: distribution.rs  endpoint_profile.rs  header_profiler.rs  header_types.rs  mod.rs  patterns.rs  profile_store.rs  rate_tracker.rs  schema_learner.rs  schema_types.rs  signals.rs  template_intern.rs  value_analysis_tests.rs
apps/synapse-pingora/src/session/: manager.rs  mod.rs
apps/synapse-pingora/src/shadow/: client.rs  config.rs  mod.rs  protocol.rs  rate_limiter.rs
apps/synapse-pingora/src/signals/: adapter.rs  auth_coverage.rs  dispatcher.rs  mod.rs
apps/synapse-pingora/src/tarpit/: manager.rs  mod.rs
apps/synapse-pingora/src/telemetry/: auth_coverage_aggregator.rs  mod.rs
apps/synapse-pingora/src/trends/: anomaly_detector.rs  correlation.rs  manager.rs  mod.rs  signal_extractor.rs  time_store.rs
apps/synapse-pingora/src/tunnel/: client.rs  config.rs  diag.rs  error.rs  logs.rs  mod.rs  shell.rs  types.rs
apps/synapse-pingora/src/utils/: auth_detection.rs  circuit_breaker.rs  mod.rs  path_normalizer.rs
apps/synapse-pingora/src/waf/: engine.rs  index.rs  mod.rs  rule.rs  synapse.rs  types.rs
apps/synapse-pingora/tests/: bench_proof.rs  dlp_parallel_tests.rs  filter_chain_integration.rs  filter_chain_tests.rs  horizon_chaos_tests.rs  horizon_client_tests.rs  profiler_integration_test.rs  protocol_compat_tests.rs  reload_integration_tests.rs  shadow_mirror_e2e_tests.rs  tunnel_client_integration.rs  waf_integration_tests.rs
apps/synapse-pingora/tests/profiler/: distribution_test.rs  endpoint_profile_test.rs  integration_test.rs  profile_store_test.rs  rate_tracker_test.rs  signals_test.rs
backlog/: config.yml
(+901 files in other folders)
