[package]
name = "synapse-pingora"
version = "0.1.0"
edition = "2021"
description = "Synapse WAF detection engine on Cloudflare Pingora proxy framework"
authors = ["Nicholas Ferguson"]
license = "Apache-2.0"
repository = "https://github.com/atlascrew/atlascrew-monorepo"

[dependencies]
# Pingora core
pingora = "0.5"
pingora-proxy = "0.5"
pingora-http = "0.5"
pingora-limits = "0.5"
pingora-core = "0.5"

# Synapse detection engine (real rule engine with 237 rules)
libsynapse = { path = "../risk-server/libsynapse" }

# Async runtime
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
bytes = "1"

# Admin HTTP API
axum = "0.7"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
http = "1"

# Pattern matching (keeping for backward compatibility)
regex = "1"
once_cell = "1"
lazy_static = "1"       # Static regex pattern initialization for DLP
aho-corasick = "1.1"    # Multi-pattern matching for DLP optimization

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Error handling
thiserror = "1"

# Concurrency
parking_lot = "0.12"
dashmap = "6.1"          # Lock-free concurrent HashMap for entity tracking

# Time measurement
instant = "0.1"
humantime-serde = "1.1"
chrono = { version = "0.4", features = ["serde"] }

# Performance optimizations (Phase 1 backlog)
ahash = "0.8"           # Fast non-cryptographic hashing (PERF-P2-2)
arc-swap = "1.6"        # Lock-free atomic pointer swap (PERF-P1-1)
unicase = "2.7"         # Zero-allocation case-insensitive strings (PERF-P0-1)

# Security hardening (Phase 1 backlog)
zeroize = "1.7"         # Secure memory clearing (SEC-010)
governor = "0.6"        # Rate limiting (SEC-009)

# Phase 3: Feature Migration - JA4 Fingerprinting
sha2 = "0.10"           # SHA256 for fingerprint hashing
hex = "0.4"             # Hex encoding for hash output
urlencoding = "2.1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "detection"
harness = false

[[bench]]
name = "goblins"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.bench]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.dev]
panic = "abort"

[profile.test]
panic = "abort"

