[package]
name = "synapse-pingora"
version = "0.1.0"
edition = "2021"
description = "Synapse WAF detection engine on Cloudflare Pingora proxy framework"
authors = ["Nicholas Ferguson"]
license = "Apache-2.0"
repository = "https://github.com/atlascrew/atlascrew-monorepo"

[lib]
name = "synapse_pingora"
path = "src/lib.rs"

[[bin]]
name = "synapse-pingora"
path = "src/main.rs"

[dependencies]
# Pingora core
pingora = { version = "0.6", features = ["openssl"] }
pingora-proxy = "0.6"
pingora-http = "0.6"
pingora-limits = "0.6"
pingora-core = { version = "0.6", features = ["openssl"] }
pingora-openssl = "0.6"

# Async runtime
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"           # For parallel detector execution with join_all
futures-util = "0.3"      # Stream/Sink extensions for WebSocket
bytes = "1"

# Admin HTTP API
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
http = "1"
reqwest = { version = "0.11", features = ["json"] }

# Pattern matching (keeping for backward compatibility)
regex = "1"
html-escape = "0.2"
once_cell = "1"
lazy_static = "1"       # Static regex pattern initialization for DLP
aho-corasick = "1.1"    # Multi-pattern matching for DLP optimization

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "1"

# Concurrency
parking_lot = "0.12"
dashmap = "6.1"          # Lock-free concurrent HashMap for entity tracking
crossbeam-channel = "0.5" # MPMC channels for background cleanup threads

# Time measurement
instant = "0.1"
humantime-serde = "1.1"
chrono = { version = "0.4", features = ["serde"] }

# Performance optimizations (Phase 1 backlog)
ahash = "0.8"           # Fast non-cryptographic hashing (PERF-P2-2)
arc-swap = "1.6"        # Lock-free atomic pointer swap (PERF-P1-1)
unicase = "2.7"         # Zero-allocation case-insensitive strings (PERF-P0-1)

# Security hardening (Phase 1 backlog)
zeroize = "1.7"         # Secure memory clearing (SEC-010)
governor = "0.6"        # Rate limiting (SEC-009)
fastrand = "2.0"        # Fast random number generation for sampling
getrandom = "0.2"       # Cryptographically secure random (SEC-PRNG)
openssl = "0.10"        # Private key validation for minimum key size (SEC-PKI)
idna = "1.0"            # IDNA punycode for Unicode homograph detection (WAF-P2-6)

# Crawler detection (risk-server port)
moka = { version = "0.12", features = ["sync"] }  # LRU cache with TTL
trust-dns-resolver = "0.23"                        # Async DNS resolution
ipnet = "2.9"                                      # IP network/CIDR handling

# Signal Horizon integration (risk-server port)
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }  # WebSocket client
rustls = "0.22"
rustls-pemfile = "1"
webpki-roots = "0.26"

# System monitoring
sysinfo = "0.32"        # CPU, memory, network, process metrics

# Terminal PTY support (remote shell)
portable-pty = "0.8"

# Phase 3: Feature Migration - JA4 Fingerprinting
sha2 = "0.10"           # SHA256 for fingerprint hashing
hex = "0.4"             # Hex encoding for hash output
urlencoding = "2.1.3"

# Trends module (risk-server port)
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
percent-encoding = "2.3"    # URL encoding/decoding for WAF engine

# Phase 6: Interrogator System - Cookie signing
hmac = "0.12"           # HMAC-SHA256 for cookie signatures
subtle = "2.5"          # Constant-time comparison for crypto

[features]
heavy-tests = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
http-body-util = "0.1"
tempfile = "3"
serial_test = "3"

[[bench]]
name = "detection"
harness = false

[[bench]]
name = "goblins"
harness = false

[[bench]]
name = "pipeline"
harness = false

[profile.release]
lto = "thin"  # Changed from "fat" to reduce memory usage during linking
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.bench]
lto = "thin"  # Changed from "fat" to reduce memory usage
codegen-units = 1
opt-level = 3
# Note: panic = "abort" removed for criterion compatibility

[profile.dev]
# Note: panic = "abort" removed for test compatibility
# Tests require panic = "unwind" to catch and report failures

# [profile.test]
# Inherits from dev, which uses default panic = "unwind"
